fix projects section tablet responsivness

--- a/css/style.css
+++ b/css/style.css
@@ -488,8 +488,7 @@ textarea {
       border-bottom: 1px solid #ccc; }
   .projects__info {
     text-align: left;
-    flex: 0 0 auto;
-    margin: 0 auto; }
+    flex: 0 0 auto; }
     .projects__info-description {
       display: block;
       font-size: 1.4rem; }
@@ -504,7 +503,7 @@ textarea {
   .projects-title {
     margin-bottom: 0; }
   .projects__media {
-    flex: 1 60rem; }
+    flex: 1 50rem; }
 
 .contact {
   position: relative;
