--- a/sass/sections/_projects.scss
+++ b/sass/sections/_projects.scss
@@ -18,7 +18,6 @@
   &__info {
     text-align: left;
     flex: 0 0 auto;
-    margin: 0 auto;
 
     &-description {
       display: block;
@@ -45,6 +44,6 @@
   }
 
   &__media {
-    flex: 1 60rem;
+    flex: 1 50rem;
   }
 }
